bugfix: tiles blurring...is it ok now?

--- a/src/style.css
+++ b/src/style.css
@@ -154,6 +154,16 @@ button:focus-visible {
 .stats-displays-container {
   display: flex;
 }
+
+.middle-display-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.middle-display-container h3 {
+  margin: 0;
+}
+
 @media (max-width: 767px) {
   .stats-displays-container {
     display: block;
@@ -210,7 +220,6 @@ button:focus-visible {
   animation: explosion 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   transform-box: fill-box;
   transform-origin: center;
-
 }
 
 @keyframes explosion {
